# RLTraining_ws

devel/: .catkin  setup.sh
devel/include/custom_msgs/: ResetEpisode.h  UpdateCurriculumRequest.h
devel/include/fleet_manager/: DroneStatus.h  InjectTasks.h  InjectTasksRequest.h  InjectTasksResponse.h  QueryFleetAndTasks.h  QueryFleetAndTasksRequest.h  QueryFleetAndTasksResponse.h  TaskStatus.h
devel/include/nlp_drone_control/: Action.h  Plan.h  ToolCall.h
devel/include/poi_state_server/: GetPOIInfo.h  GetPOIInfoRequest.h  GetPOIInfoResponse.h  ListPOIs.h  ListPOIsRequest.h  ListPOIsResponse.h  NamedPoint.h  POIInfo.h
devel/include/rl_bridge/: CurriculumStatus.h  RLAction.h  RLDone.h  RLEvent.h  RLObservation.h  RLReset.h  RLReward.h
devel/include/uav_scheduler/: ComputeAssignment.h  ComputeAssignmentRequest.h  ComputeAssignmentResponse.h
devel/include/vlm_service/: CaptureImage.h  CaptureImageRequest.h  CaptureImageResponse.h
devel/lib/astar_planner/: astar_planner_node
devel/lib/fleet_manager/: fleet_manager_node
devel/lib/map_generator/: yaml_to_map_publisher_node
rltraining_ws/src/map_generator/: CMakeLists.txt  package.xml
rltraining_ws/src/map_generator/config/: points_of_interest.yaml
rltraining_ws/src/map_generator/src/: yaml_to_map_publisher.cpp
rltraining_ws/src/nlp_drone_control/: CMakeLists.txt
rltraining_ws/src/nlp_drone_control/config/: drone_config.yaml  help.txt  points_of_interest_simple.yaml  system_prompt.txt
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v1/: help.txt
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v1/run_logs/: timers.json  training_status.json
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v2/: configuration.yaml
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v2/DroneNavigation/: events.out.tfevents.1755159999.lpf-ubuntu.254345.0
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v2/run_logs/: training_status.json
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v4/: configuration.yaml
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v4/DroneNavigation/: events.out.tfevents.1754213347.lpf-ubuntu.658262.0
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v4/run_logs/: timers.json
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v5/: configuration.yaml
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v5/run_logs/: timers.json  training_status.json
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v6/: configuration.yaml
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v6/DroneNavigation/: events.out.tfevents.1754194725.lpf-ubuntu.634115.0
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v6/run_logs/: training_status.json
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v7/DroneNavigation/: events.out.tfevents.1756346281.lpf-ubuntu.697685.0
rltraining_ws/src/nlp_drone_control/config/results/DroneNavigation_v7/run_logs/: timers.json
rltraining_ws/src/nlp_drone_control/include/nlp_drone_control/: llm_processor_node.h
rltraining_ws/src/nlp_drone_control/src/: inspection_hub_node.cpp  llm_processor_node.cpp
src/fleet_manager/: CMakeLists.txt  package.xml
src/fleet_manager/msg/: DroneStatus.msg  TaskStatus.msg
src/fleet_manager/src/: fleet_manager_node.cpp
src/fleet_manager/srv/: InjectTasks.srv  QueryFleetAndTasks.srv
src/nlp_drone_control/: CMakeLists.txt  package.xml
src/nlp_drone_control/config/: drone_config.yaml  points_of_interest.yaml  system_prompt.txt  内存条支付记录  显卡魔方支付账单
src/nlp_drone_control/config/results/DroneNavigation_v1/: configuration.yaml
src/nlp_drone_control/config/results/DroneNavigation_v1/DroneNavigation/: events.out.tfevents.1755267651.lpf-ubuntu.49910.0
src/nlp_drone_control/config/results/DroneNavigation_v2/run_logs/: timers.json
src/nlp_drone_control/config/results/DroneNavigation_v3/: configuration.yaml
src/nlp_drone_control/config/results/DroneNavigation_v3/DroneNavigation/: events.out.tfevents.1756654840.lpf-ubuntu.991767.0
src/nlp_drone_control/config/results/DroneNavigation_v3/run_logs/: timers.json  training_status.json
src/nlp_drone_control/config/results/DroneNavigation_v4/run_logs/: training_status.json
src/nlp_drone_control/config/results/DroneNavigation_v5/DroneNavigation/: events.out.tfevents.1756306551.lpf-ubuntu.673419.0
src/nlp_drone_control/config/results/DroneNavigation_v6/: help.txt
src/nlp_drone_control/config/results/DroneNavigation_v6/run_logs/: timers.json
src/nlp_drone_control/config/results/DroneNavigation_v7/: configuration.yaml
src/nlp_drone_control/config/results/DroneNavigation_v7/run_logs/: training_status.json
src/nlp_drone_control/include/nlp_drone_control/: common_types.h  llm_planner_node.h  llm_processor_node.h  task_executor_node.h
src/nlp_drone_control/launch/: llm_process.launch
src/nlp_drone_control/msg/: Plan.msg  ToolCall.msg
src/nlp_drone_control/src/: llm_planner_main.cpp  llm_planner_node.cpp  llm_processor_node.cpp  task_executor_main.cpp  task_executor_node.cpp
src/nlp_drone_control/srv/: ExecuteDroneAction.srv
src/poi_state_server/: CMakeLists.txt
src/poi_state_server/msg/: NamedPoint.msg  POIInfo.msg
src/poi_state_server/src/: poi_state_server_node.cpp
src/poi_state_server/srv/: GetPOIInfo.srv  ListPOIs.srv
src/rl_bridge/: CMakeLists.txt
src/uav_scheduler/: CMakeLists.txt
src/uav_scheduler/include/uav_scheduler/: auction_solver.h  distributed_auction_solver.h  genetic_solver.h  hungarian_solver.h
src/uav_scheduler/src/: hungarian_solver.cpp  scheduler_node.cpp
src/uav_scheduler/srv/: ComputeAssignment.srv
src/ui_control/: CMakeLists.txt  package.xml
src/ui_control/include/ui_control/: main_window.hpp  qnode.hpp
src/ui_control/launch/: ui_control.launch
src/ui_control/src/: log_in.ui  v_uav_local_network.cpp  v_uav_local_network.h  v_uav_local_network.ui
src/ui_control/ui/: main_window.ui
(+315 files in other folders)
